cabal-version: >=1.10
name: timezone-unix
version: 0.1
author: Ashley Yakeley
license: BSD3
license-file: LICENSE
maintainer: ashley@semantic.org
copyright: 2016 Ashley Yakeley
build-type: Simple

source-repository head
    type: git
    location: https://github.com/AshleyYakeley/timezone-unix

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
    build-depends:
        base,
        time,
        unix,
        filepath,
        directory,
        timezone-series,
        timezone-olson
    exposed-modules:
        Data.Time.LocalTime.TimeZone.Unix
    other-modules:
    ghc-options: -Wall -Werror

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    build-depends:
        base,
        time,
        timezone-series,
        tasty,
        tasty-hunit,
        timezone-unix
    default-language: Haskell2010
    default-extensions:
    ghc-options: -Wall -Werror
    main-is: Test.hs
    other-modules:
